@@ -1,0 +1,5 @@
+#! /bin/sh
+# In ubiquity, we never want to trigger reprocessing of events by udev, as
+# that can cause a variety of interesting problems, and we never need it
+# since we never install new modules.
+/bin/update-dev --settle
