@@ -9,6 +9,7 @@ compat/anna-install usr/lib/ubiquity/compat
 compat/apt-install usr/lib/ubiquity/compat
 compat/depmod usr/lib/ubiquity/compat
 compat/udpkg usr/lib/ubiquity/compat
+compat/update-dev usr/lib/ubiquity/compat
 scripts/* usr/share/ubiquity
 desktop/ubiquity.png usr/share/pixmaps
 pixmaps/world_map-960.png usr/share/ubiquity/pixmaps
@@ -51,6 +52,7 @@ d-i/source/debian-installer-utils/mapdevfs bin
 d-i/source/debian-installer-utils/register-module bin
 d-i/source/debian-installer-utils/register-module.post-base-installer usr/lib/ubiquity/debian-installer-utils
 d-i/source/debian-installer-utils/search-path bin
+d-i/source/debian-installer-utils/update-dev bin
 d-i/source/debian-installer-utils/user-params bin
 
 # hw-detect
