@@ -22,6 +22,9 @@ ubiquity (1.12.0) UNRELEASED; urgency=low
   * Depend on grub | grub-pc, and don't remove grub-pc until after
     grub-installer has had the chance to decide whether it wants to use it
     (LP: #349835).
+  * Add a compatibility wrapper for update-dev to ensure that it never
+    attempts to call 'udevadm trigger', which isn't necessary in ubiquity
+    and can cause problems (LP: #349937).
 
   [ Evan Dandrea ]
   * Make the partman/unmount_active dialog a yes or no question
